Update root controller, use Java time

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 application:
-  title: "An example Spring Boot app using Java"
+  name: "springboot-java-example"
+  description: "An example Spring Boot app using Java"
 
 server:
   http:
