--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jecklgamis</groupId>
-    <artifactId>springboot-java-example</artifactId>
+    <artifactId>spring-boot-java-example</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <parent>
