--- a/deployment/k8s/helm/chart/values.yaml
+++ b/deployment/k8s/helm/chart/values.yaml
@@ -10,7 +10,8 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "main"
 
-imagePullSecrets: [ ]
+imagePullSecrets:
+  - name: dockerhub
 nameOverride: ""
 fullnameOverride: ""
 
@@ -69,7 +70,7 @@ resources: { }
 #   memory: 128Mi
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 1
   maxReplicas: 2
   targetCPUUtilizationPercentage: 80
