--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,7 @@ server:
     enabled: true
   port: 8443
   ssl:
-    key-store: classpath:keystore.pfx
-    key-store-password: changeit
+    enabled: false
 
 management:
   endpoints:
